--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,11 @@
     <string name="user_stream_notification_text">Twitterストリーム接続中です</string>
     <string name="tweet_hint">ついーとする</string>
     <string name="tweet">TWEET</string>
+    <string name="menu_action_reply">返信する</string>
+    <string name="menu_action_rt">リツイート</string>
+    <string name="menu_action_favorite">お気にい入りに追加する</string>
+    <string name="menu_action_list">リストを管理</string>
+    <string name="menu_action_open_browser">ブラウザで開く</string>
+    <string name="menu_action_share">ツイートを共有する</string>
+    <string name="menu_icon">MenuIcon</string>
 </resources>
