fix setting activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="menu_action_share">ツイートを共有する</string>
     <string name="menu_icon">MenuIcon</string>
     <string name="title_activity_setting">SettingActivity</string>
+    <string name="setting_action_account">アカウント設定</string>
     <string name="hello_world">Hello world!</string>
 </resources>
