--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="menu_icon">MenuIcon</string>
     <string name="title_activity_setting">SettingActivity</string>
     <string name="setting_action_account">アカウント設定</string>
+    <string name="setting_action_tab">タブ設定</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_tab_control">TabControlActivity</string>
 </resources>
