--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Twinown</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_toggle_quick_post">クイック投稿</string>
     <string name="action_change_account">アカウント変更</string>
     <string name="notice_change_account">アカウントを変更しました(%s)</string>
 
@@ -39,6 +40,7 @@
 
     <string name="dialog_title_choose_theme">テーマを選択してください</string>
     <string name="setting_item_title_bar">タイトルバーを表示する</string>
+    <string name="setting_item_quick_post">起動時にクイック投稿をオンにする</string>
 
     <string name="hello_world">Hello world!</string>
 
@@ -47,4 +49,5 @@
 
     <string name="preference_key_theme">preference_key_theme</string>
     <string name="preference_key_title_bar">preference_key_title_bar</string>
+    <string name="preference_key_quick_post">preference_key_quick_post</string>
 </resources>
