--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,6 @@
     <string name="menu_action_list">リストを管理</string>
     <string name="menu_action_open_browser">ブラウザで開く</string>
     <string name="menu_action_share">ツイートを共有する</string>
-    <string name="menu_icon">MenuIcon</string>
 
     <string name="title_activity_setting">SettingActivity</string>
     <string name="setting_action_account">アカウント設定</string>
@@ -42,12 +41,11 @@
     <string name="setting_item_title_bar">タイトルバーを表示する</string>
     <string name="setting_item_quick_post">起動時にクイック投稿をオンにする</string>
 
-    <string name="hello_world">Hello world!</string>
-
     <string name="title_activity_tab_control">TabControlActivity</string>
     <string name="title_activity_appearance_control">AppearanceControlActivity</string>
 
     <string name="preference_key_theme">preference_key_theme</string>
     <string name="preference_key_title_bar">preference_key_title_bar</string>
     <string name="preference_key_quick_post">preference_key_quick_post</string>
+    <string name="title_activity_user">UserActivity</string>
 </resources>
