--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Twinown</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_tweet">ツイート</string>
     <string name="action_toggle_quick_post">クイック投稿</string>
     <string name="action_change_account">アカウント変更</string>
     <string name="notice_change_account">アカウントを変更しました(%s)</string>
@@ -19,6 +20,7 @@
 
     <string name="tweet_hint">ついーとする</string>
     <string name="tweet">TWEET</string>
+    <string name="tweet_length">140</string>
     <string name="add">ADD</string>
 
     <string name="menu_action_reply">返信する</string>
@@ -50,4 +52,7 @@
     <string name="preference_key_title_bar">preference_key_title_bar</string>
     <string name="preference_key_quick_post">preference_key_quick_post</string>
     <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_tweet">TweetActivity</string>
+
+    <string name="hello_world">Hello world!</string>
 </resources>
