--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="dialog_title_choose_tab_type">タブの種類を設定してください</string>
     <string name="dialog_title_choose_account">アカウントを選択してください</string>
     <string name="dialog_title_choose_list">リストを選択してください</string>
+    <string name="dialog_title_tab_name">タブ名変更</string>
+    <string name="dialog_hint_tab_name">タブ名変更</string>
 
     <string name="dialog_title_add_client">クライアント追加</string>
     <string name="dialog_hint_client_name">クライアント名</string>
