--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="setting_item_quick_post_on_top">クイック投稿を上部に表示する</string>
     <string name="setting_item_show_created_at">投稿時間を表示する</string>
     <string name="setting_item_show_client_name">クライアント名を表示する</string>
+    <string name="setting_item_show_thumbnail">サムネイルを表示する</string>
 
     <string name="preference_key_theme">preference_key_theme</string>
     <string name="preference_key_title_bar">preference_key_title_bar</string>
@@ -77,6 +78,7 @@
     <string name="preference_key_quick_post_on_top">preference_key_quick_post_on_top</string>
     <string name="preference_key_show_created_at">preference_show_created_at</string>
     <string name="preference_key_show_client_name">preference_show_client_name</string>
+    <string name="preference_key_show_thumbnail">preference_show_thumbnail</string>
     <string name="preference_key_load_count">preference_key_load_count</string>
 
     <string name="title_activity_setting">設定</string>
